--- a/css/estilos_v312.css
+++ b/css/estilos_v312.css
@@ -154,12 +154,18 @@ filter: progid: DXImageTransform.Microsoft.Shadow(strength = 3, direction = 135,
 -ms-filter: "progid: DXImageTransform.Microsoft.Shadow(strength = 3, Direction = 135, Color = '#000000')"; }
 
 #section_sidebar .scsdb_item ul li a{
-	display: block;
 	float: left;
 	padding: 7px 15px;
-	margin:5px 10px;
+	margin: 5px 45px;
 	color: #fff;
 	font-weight: bold;
+	display: inline-block;
+	width: 100px;
+	text-align: center;
+}
+
+#section_sidebar .scsdb_item ul li{
+	display: inline-block;
 }
 
 #section_sidebar .scsdb_item ul li a.en{ background-color: #ff5a1a; }
